Add footer and fix something

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -22,8 +22,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="./css/vertical-layout-light/style.css">
     <!-- endinject -->
-
-    <link rel="shortcut icon" href="./img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 
 </head>
 <body>
