--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,25 @@
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<H1>Hello F&D shop</H1>
-<% if(users != '') { %>
-    <% users.forEach(function(user, index){ %>
-        <div class="pt-1">1<%- user.email  %></div>
-    <% }) %>
-<% } %>    
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+      <div class="content-wrapper d-flex align-items-center auth px-0">
+        <div class="row w-100 mx-0">
+          <div class="col-lg-4 mx-auto">
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <H1>Hello F&D shop</H1>
+            <% if(users != '') { %>
+                <% users.forEach(function(user, index){ %>
+                    <div class="pt-1"><%- user.email  %></div>
+                <% }) %>
+            <% } %>   
+          </div>
+        </div>
+      </div>
+      <!-- content-wrapper ends -->
+    </div>
+    <!-- page-body-wrapper ends -->
+  </div>
