complete the login function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
   <hr />
   <!-- foods section starts  -->
   <section class="packages" id="foods">
-    <h1 class="heading">our <span>Foods</span></h1>
+    <a href="/foods"><h1 class="heading">our <span>Foods</span></h1></a>
     <div class="box-container">
       <div class="box" data-aos="fade-up">
         <div class="image">
@@ -73,7 +73,7 @@
   <hr />
   <!-- drinks section starts  -->
   <section class="packages" id="drinks">
-    <h1 class="heading">our <span>Drinks</span></h1>
+    <a href="/foods"><h1 class="heading">our <span>Drinks</span></h1></a>
     <div class="box-container">
       <div class="box" data-aos="fade-up">
         <div class="image">
