--- a/views/layouts/client.ejs
+++ b/views/layouts/client.ejs
@@ -31,7 +31,7 @@
     <!-- header section starts  -->
 
     <header class="header navbar-light" style="background-color: #373636">
-      <a href="/clients" class="logo">
+      <a href="/client" class="logo">
         <i class="fas fa-utensils"></i> <span class="text-white">F&D Zone</span>
       </a>
 
@@ -42,21 +42,21 @@
 
       <div class="icons">
         <div class="fas fa-search" id="search-btn"></div>
-        <a href="/clients/info">
+        <a href="/info">
           <div class="fas fa-user" id="login-btn"></div>
         </a>
-        <a href="/clients/cart">
+        <a href="/cart">
           <div class="fa-sharp fa-solid fa-cart-shopping" id="cart-btn"></div>
         </a>
         <div class="fas fa-bars" id="menu-btn"></div>
       </div>
 
       <nav class="navbar border-warning">
-        <a href="/clients">Home</a>
-        <a href="/clients/about">About</a>
-        <a href="/clients/drinks">Drinks</a>
-        <a href="/clients/foods">Foods</a>
-        <a href="/clients/contact">Contact</a>
+        <a href="/client">Home</a>
+        <a href="/client-about">About</a>
+        <a href="/client-drinks">Drinks</a>
+        <a href="/client-foods">Foods</a>
+        <a href="/client-contact">Contact</a>
       </nav>
     </header>
 
@@ -122,7 +122,7 @@
                 </div>
                 <ul>
                   <li>
-                    <a href="/clients/"><h4>Home</h4></a>
+                    <a href="/client"><h4>Home</h4></a>
                   </li>
                   <li>
                     <a href="#"><h4>About us</h4></a>
@@ -175,7 +175,7 @@
             <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
               <div class="footer-menu">
                 <ul>
-                  <li><a href="/clients/">Home</a></li>
+                  <li><a href="/client">Home</a></li>
                   <li><a href="#">Terms</a></li>
                   <li><a href="#">Privacy</a></li>
                   <li><a href="#">Policy</a></li>
