--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -49,7 +49,104 @@
         Main wrapper start
     ***********************************-->
     <div id="main-wrapper">
+      <!--**********************************
+            Nav header start
+        ***********************************-->
+      <div class="nav-header">
+        <div class="brand-logo">
+          <a href="/admin-dashboard">
+            <i class="fas fa-utensils text-warning"></i>
+            <span class="text-white font-weight-bold">F&D Zone</span>
+          </a>
+        </div>
+      </div>
+
+      <!--**********************************
+            Nav header end
+        ***********************************-->
+
+      <!--**********************************
+            Header start
+        ***********************************-->
+
+      <!--**********************************
+            Header end ti-comment-alt
+        ***********************************-->
+
+      <!--**********************************
+            Sidebar start
+        ***********************************-->
+      <div class="nk-sidebar">
+        <div class="nk-nav-scroll">
+          <ul class="metismenu" id="menu">
+            <li class="nav-label">Dashboard</li>
+            <li>
+              <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                <span class="nav-text">Dashboard</span>
+              </a>
+              <ul aria-expanded="false">
+                <li><a href="/admin-dashboard">Admin Dashboard</a></li>
+                <!-- <li><a href="./index-2.html">Home 2</a></li> -->
+              </ul>
+            </li>
+
+            <li>
+              <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                <span class="nav-text">Products</span>
+              </a>
+              <ul aria-expanded="false">
+                <li><a href="/admin-drinks">Drinks</a></li>
+                <li><a href="/admin-foods">Foods</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                <span class="nav-text">Shipper</span>
+              </a>
+              <ul aria-expanded="false">
+                <li><a href="/free">Free</a></li>
+                <li><a href="/working">Working</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                <span class="nav-text">Receipts</span>
+              </a>
+              <ul aria-expanded="false">
+                <li><a href="/today-receipts">Today Receipts</a></li>
+                <li><a href="/all-receipts">All Receipts</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="has-arrow" href="javascript:void()" aria-expanded="false">
+                <span class="nav-text">Profile</span>
+              </a>
+              <ul aria-expanded="false">
+                <li><a href="/admin-info">Info</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!--**********************************
+            Sidebar end
+        ***********************************-->
       <main><%- body -%></main>
+
+      <!--**********************************
+            Footer start
+        ***********************************-->
+      <div class="footer">
+        <div class="copyright">
+          <p>
+            Copyright &copy; 2022, All Right Reserved
+            <a href="#" class="text-warning">FD_Zone</a>
+          </p>
+        </div>
+      </div>
+      <!--**********************************
+            Footer end
+        ***********************************-->
     </div>
     <!--**********************************
         Main wrapper end
