--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
             <form class="pt-3" action="/register" method="POST">
               <div class="row g-3">
                 <div class="col-12">
-                  <label for="Email" class="form-label"><H3>Email</H3></label>
+                  <label for="email" class="form-label"><H3>Email</H3></label>
                   <input
                     style="font-size: 16px"
                     type="email"
