--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -26,6 +26,10 @@
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
 
+      <!-- Dưới cái dòng này chỗ này -->
+      <H1 class="ten">Tên: Phong</H1>
+      <H1 class="diachi">address: Thủ Đức</H1>
+
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
