--- a/views/admin-drinks.ejs
+++ b/views/admin-drinks.ejs
@@ -12,29 +12,27 @@
   <!-- row -->
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-12">
+      <% if (drinks != '') { %> <% drinks.forEach(function(drink, index){ %>
+      <div class="col-6">
         <div class="card">
           <div class="card-body">
             <div class="row rounded">
-              <div class="col-2">
+              <div class="col-4">
                 <img
                   class="img-fluid img-responsive rounded product-image"
                   id="product"
-                  src="./img/blog-1.jpg"
+                  src="<%= drink.image_url%>"
+                  style="object-fit: cover"
                 />
               </div>
-              <div class="col-8 border-left mt-1">
-                <h5>Hambager</h5>
-                <div class="mt-1 mb-1 spec-1">So delicious!!</div>
-                <p class="text-justify text-truncate para mb-0">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, mollitia?
-                  Itaque, ullam! Quisquam, fugit esse ut dolor quibusdam facilis molestias sunt
-                  porro, velit repellendus aperiam vero. Distinctio vel officiis eaque?<br /><br />
-                </p>
+              <div class="col-6 border-left mt-1">
+                <h5><%= drink.name %></h5>
+                <div class="mt-1 mb-1 spec-1"><%= drink.type %></div>
+                <p class="text-justify text-truncate para mb-0"><%= drink.description%></p>
               </div>
               <div class="align-items-center align-content-center col-md-2 border-left mt-1">
                 <div class="d-flex flex-row">
-                  <h4 class="mr-1">$13.99</h4>
+                  <h4 class="mr-1"><%= drink.price %> VND</h4>
                 </div>
                 <div class="d-flex flex-column mt-4">
                   <button class="btn btn-warning btn-sm" type="button">Update</button>
@@ -43,74 +41,16 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <div class="row rounded">
-              <div class="col-2">
-                <img
-                  class="img-fluid img-responsive rounded product-image"
-                  id="product"
-                  src="./img/OIP.jpg"
-                />
-              </div>
-              <div class="col-8 border-left mt-1">
-                <h5>Hambager</h5>
-                <div class="mt-1 mb-1 spec-1">So delicious!!</div>
-                <p class="text-justify text-truncate para mb-0">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, mollitia?
-                  Itaque, ullam! Quisquam, fugit esse ut dolor quibusdam facilis molestias sunt
-                  porro, velit repellendus aperiam vero. Distinctio vel officiis eaque?<br /><br />
-                </p>
-              </div>
-              <div class="align-items-center align-content-center col-md-2 border-left mt-1">
-                <div class="d-flex flex-row">
-                  <h4 class="mr-1">$13.99</h4>
-                </div>
-                <div class="d-flex flex-column mt-4">
-                  <button class="btn btn-warning btn-sm" type="button">Update</button>
-                  <button class="btn btn-outline-danger btn-sm mt-2" type="button">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <div class="row rounded">
-              <div class="col-2">
-                <img class="img-fluid img-responsive rounded product-image" src="./img/p-4.jpg" />
-              </div>
-              <div class="col-8 border-left mt-1">
-                <h5>Hambager</h5>
-                <div class="mt-1 mb-1 spec-1">So delicious!!</div>
-                <p class="text-justify text-truncate para mb-0">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam, mollitia?
-                  Itaque, ullam! Quisquam, fugit esse ut dolor quibusdam facilis molestias sunt
-                  porro, velit repellendus aperiam vero. Distinctio vel officiis eaque?<br /><br />
-                </p>
-              </div>
-              <div class="align-items-center align-content-center col-md-2 border-left mt-1">
-                <div class="d-flex flex-row">
-                  <h4 class="mr-1">$13.99</h4>
-                </div>
-                <div class="d-flex flex-column mt-4">
-                  <button class="btn btn-warning btn-sm" type="button">Update</button>
-                  <button class="btn btn-outline-danger btn-sm mt-2" type="button">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card-body d-flex justify-content-center">
-          <button class="btn btn-primary btn-lg" type="button">Add a new drink</button>
         </div>
       </div>
+
+      <% }) %> <% } else { %>
+      <h4>No item found</h4>
+      <% } %>
     </div>
   </div>
 </div>
-
 <!-- #/ container -->
 <!--**********************************
-              Content body end
-  ***********************************-->
+                Content body end
+    ***********************************-->
