--- a/views/admin-foods.ejs
+++ b/views/admin-foods.ejs
@@ -5,14 +5,50 @@
   .col-2 img {
     width: 100%;
     height: 20vh;
-    object-fit: contain;
+    object-fit: cover;
   }
 </style>
 <div class="content-body">
   <!-- row -->
   <div class="container-fluid">
     <div class="row justify-content-center">
-      <% if(typeof foods !== '') { %> <% foods.forEach(function(food,index) { %> <% }) %> <% } %>
+      <% if (foods != '') { %> <% foods.forEach(function(food, index){ %>
+      <div class="col-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="row rounded">
+              <div class="col-2">
+                <img
+                  class="img-fluid img-responsive rounded product-image"
+                  id="product"
+                  src="<%= food.image_url%>"
+                />
+              </div>
+              <div class="col-7 border-left mt-1">
+                <h3><%= food.name %></h3>
+                <div class="mt-1 mb-1 spec-1"><h5>Type: <%= food.type %></h5></div>
+                <p class="text-justify para mb-0">Description: <%= food.description%></p>
+              </div>
+              <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                <div class="d-flex flex-row">
+                  <h4 class="mr-1"><%= food.price %> VND</h4>
+                </div>
+                <div class="d-flex flex-column mt-4">
+                  <button class="btn btn-warning btn-sm" type="button">Update</button>
+                  <button class="btn btn-outline-danger btn-sm mt-2" type="button">Delete</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% }) %> <% } else { %>
+      <h4>No item found</h4>
+      <% } %>
+    </div>
+    <div class="col-6 p-4 d-flex justify-content-end">
+      <a href="/admin-add-food" type="submit" class="btn btn-primary text">Add a new food</a>
     </div>
   </div>
 </div>
