insert, update, delete

--- a/views/admin-info.ejs
+++ b/views/admin-info.ejs
@@ -39,7 +39,7 @@
                 <button class="btn btn-danger px-5">Edit information</button>
               </div>
               <div class="col-6 text-center">
-                <button class="btn btn-danger px-5">Log out</button>
+                <a href="/login"><button class="btn btn-danger px-5">Log out</button></a>
               </div>
             </div>
           </div>
