--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,101 +22,126 @@
   <hr />
   <!-- foods section starts  -->
   <section class="packages" id="foods">
-    <a href="/foods"><h1 class="heading">our <span>Foods</span></h1></a>
+    <a href="/foods" title="Click fore more foods"
+      ><h1 class="heading">Our <span>Foods</span></h1></a
+    >
     <div class="box-container">
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-1.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-2.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
-        </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
-        </div>
-      </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-3.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
-        </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
-        </div>
-      </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-4.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
-        </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
-        </div>
-      </div>
+    </div>
   </section>
   <!-- foods section ends -->
   <hr />
   <!-- drinks section starts  -->
   <section class="packages" id="drinks">
-    <a href="/foods"><h1 class="heading">our <span>Drinks</span></h1></a>
+    <a href="/drinks" title="Click fore more drinks"
+      ><h1 class="heading">Our <span>Drinks</span></h1></a
+    >
     <div class="box-container">
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-1.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-4.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
-        </div>
-      </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-5.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
-        </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
-        </div>
-      </div>
-      <div class="box" data-aos="fade-up">
-        <div class="image">
-          <img src="./img/blog-6.jpg" alt="" />
-          <h3><i class="fas fa-utensils"></i> Burger</h3>
-        </div>
-        <div class="content">
-          <div class="price">50.000đ</div>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
-          <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+        <div class="col-md-3">
+          <div class="box" data-aos="fade-up">
+            <div class="image">
+              <img src="./img/blog-1.jpg" alt="" />
+              <h3><i class="fas fa-utensils"></i> Burger</h3>
+            </div>
+            <div class="content">
+              <div class="price">50.000đ</div>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, vitae.</p>
+              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
