--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-12">
         <div class="row">
           <div class="col-12">
@@ -245,7 +245,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- #/ container -->
 </div>
