--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -7,16 +7,10 @@
     <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
     <!-- Favicon icon -->
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
-    <!-- Pignose Calender -->
-    <link href="./plugins/pg-calendar/css/pignose.calendar.min.css" rel="stylesheet" />
     <!-- Chartist -->
-    <link rel="stylesheet" href="./plugins/chartist/css/chartist.min.css" />
-    <link
-      rel="stylesheet"
-      href="./plugins/chartist-plugin-tooltips/css/chartist-plugin-tooltip.css"
-    />
+
     <!-- Custom Stylesheet -->
-    <link href="css/style-dashboard.css" rel="stylesheet" />
+    <link href="/css/style-dashboard.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -155,30 +149,26 @@
     <!--**********************************
         Scripts
     ***********************************-->
-    <script src="./plugins/common/common.min.js"></script>
-    <script src="./js/custom.min.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/gleek.js"></script>
-    <script src="./js/styleSwitcher.js"></script>
+    <script src="/plugins/common/common.min.js"></script>
+    <script src="/js/custom.min.js"></script>
+    <script src="/js/settings.js"></script>
+    <script src="/js/styleSwitcher.js"></script>
 
     <!-- Chartjs -->
-    <script src="./plugins/chart.js/Chart.bundle.min.js"></script>
+    <script src="/plugins/chart.js/Chart.bundle.min.js"></script>
     <!-- Circle progress -->
-    <script src="./plugins/circle-progress/circle-progress.min.js"></script>
+    <script src="/plugins/circle-progress/circle-progress.min.js"></script>
     <!-- Datamap -->
-    <script src="./plugins/d3v3/index.js"></script>
-    <script src="./plugins/topojson/topojson.min.js"></script>
-    <script src="./plugins/datamaps/datamaps.world.min.js"></script>
-    <!-- Morrisjs -->
-    <script src="./plugins/raphael/raphael.min.js"></script>
-    <script src="./plugins/morris/morris.min.js"></script>
-    <!-- Pignose Calender -->
-    <script src="./plugins/moment/moment.min.js"></script>
-    <script src="./plugins/pg-calendar/js/pignose.calendar.min.js"></script>
-    <!-- ChartistJS -->
-    <script src="./plugins/chartist/js/chartist.min.js"></script>
-    <script src="./plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+    <script src="/plugins/d3v3/index.js"></script>
+    <script src="/plugins/topojson/topojson.min.js"></script>
+    <script src="/plugins/datamaps/datamaps.world.min.js"></script>
 
-    <script src="./js/dashboard/dashboard-1.js"></script>
+    <!-- ChartistJS -->
+    <script src="/plugins/chartist/js/chartist.min.js"></script>
+    <script src="/plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+
+    <script src="/js/dashboard/dashboard-1.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   </body>
 </html>
