--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,7 +27,9 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <H1 class="ten">Tên: Phong</H1>
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fhocviendigital.com%2Fmodel-race-canh-cua-than-ki-vao-digital-marketing%2Fmodel-race-icon-1%2F&psig=AOvVaw1LPnbUcgJN-PRuoLmnxgLX&ust=1669777802332000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCKjtmZi10vsCFQAAAAAdAAAAABAJ" alt=""HTML5 Icon"
+      style="width:128px;heighr:128px;">
+      <H1 class="ten">Tên: Hanh</H1>
       <H1 class="diachi">address: Thủ Đức</H1>
 
       <!-- Thêm chỗ này nè nghen -->
