--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,7 +27,7 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img src="./1.jpg"
+      <img src="1.jpg"
       style="width:128px;height:128px;">
       <H1 class="ten">Tên: Hanh</H1>
       <H1 class="diachi">address: Thủ Đức</H1>
