Sua file register

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -78,6 +78,17 @@
                   <hr />
                 </div>
                 <div class="col-12">
+                  <label for="phone" class="form-label"><H3>Phone</H3></label>
+                  <input
+                    style="font-size: 16px"
+                    type="text"
+                    name="phone"
+                    id="phone"
+                    class="form-control form-control-lg"
+                  />
+                  <hr />
+                </div>
+                <div class="col-12">
                   <label for="address" class="form-label"><H3>Address</H3></label>
                   <input
                     style="font-size: 16px"
