--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,8 +27,8 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img src="./views/1.jpg" alt=""
-      style="width:128px;height:128px;"/>
+      <img src="./views/1.jpg"
+      style="width:128px;height:128px"/>
       <H1 class="ten">Tên: Hanh</H1>
       <H1 class="diachi">address: Thủ Đức</H1>
 
