--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -30,7 +30,9 @@
       <img src="./views/1.jpg"
       style="width:128px;height:128px"/>
       <H1 class="ten">Tên: Hanh</H1>
+      <H1 class="sdt">Số điện thoại: 0123456789</H1>
       <H1 class="diachi">address: Thủ Đức</H1>
+      <H1 class="gioitinh">Giới tính: Nữ</H1>
 
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
