--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -31,7 +31,7 @@
       style="width:128px;height:128px"/>
       <H1 class="ten">Tên: Hanh</H1>
       <H1 class="sdt">Số điện thoại: 0123456789</H1>
-      <H1 class="diachi">address: Thủ Đức</H1>
+      <H1 class="diachi">Address: Thủ Đức</H1>
       <H1 class="gioitinh">Giới tính: Nữ</H1>
 
       <!-- Thêm chỗ này nè nghen -->
