--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -28,7 +28,7 @@
 
       <!-- Dưới cái dòng này chỗ này -->
       <img src="1.jpg" alt=""
-      style="width:128px;height:128px;"/>
+      style="width:128px;height:128px;">
       <H1 class="ten">Tên: Hanh</H1>
       <H1 class="sdt">Số điện thoại: 0123456789</H1>
       <H1 class="diachi">Address: Thủ Đức</H1>
