--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,6 +44,17 @@
                   <hr />
                 </div>
                 <div class="col-12">
+                  <label for="confirm-password" class="form-label"><H3>Confirm Password</H3></label>
+                  <input
+                    style="font-size: 16px"
+                    type="password"
+                    name="confirm-password"
+                    id="confirm-password"
+                    class="form-control form-control-lg"
+                  />
+                  <hr />
+                </div>
+                <div class="col-12">
                   <label for="name" class="form-label"><H3>Name</H3></label>
                   <input
                     style="font-size: 16px"
