--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,12 +27,11 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img src="1.jpg" alt=""
-      style="width:128px;height:128px;">
-      <H1 class="ten">Tên: Hanh</H1>
-      <H1 class="sdt">Số điện thoại: 0123456789</H1>
-      <H1 class="diachi">Address: Thủ Đức</H1>
-      <H1 class="gioitinh">Giới tính: Nữ</H1>
+      <img src="./views/1.jpg" style="width: 128px; height: 128px" />
+      <H1 class="name">Name: Hanh</H1>
+      <H1 class="phone">Phone: 0123456789</H1>
+      <H1 class="address">Address: Thu Duc</H1>
+      <H1 class="gender">gender: Female</H1>
 
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
