--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,7 +27,7 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img src="./views/1.jpg" style="width: 128px; height: 128px" />
+      <img src="./F-D/views/1.jpg" style="width: 128px; height: 128px" />
       <H1 class="name">Name: Hanh</H1>
       <H1 class="phone">Phone: 0123456789</H1>
       <H1 class="address">Address: Thu Duc</H1>
