--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -28,10 +28,10 @@
 
       <!-- Dưới cái dòng này chỗ này -->
       <img src="./F-D/views/1.jpg" style="width: 128px; height: 128px" />
-      <H1 class="name">Name: Hanh</H1>
-      <H1 class="phone">Phone: 0123456789</H1>
-      <H1 class="address">Address: Thu Duc</H1>
-      <H1 class="gender">gender: Female</H1>
+      <H1 class="ten">Name: Hanh</H1>
+      <H1 class="sdt">Phone: 0123456789</H1>
+      <H1 class="diachi">Address: Thu Duc</H1>
+      <H1 class="gioitinh">gender: Female</H1>
 
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
