--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -27,7 +27,13 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img src="./F-D/views/1.jpg" style="width: 128px; height: 128px" />
+      <img
+        class="d-flex justify-content-center"
+        src="./img/1.jpg"
+        width="128"
+        height="128"
+        alt=""
+      />
       <H1 class="ten">Name: Hanh</H1>
       <H1 class="sdt">Phone: 0123456789</H1>
       <H1 class="diachi">Address: Thu Duc</H1>
