--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -14,7 +14,7 @@
       <h3><%= infoErrorsObj %></h3>
     </div>
     <% } %>
-    <div class="col-12 text-center mt-xl-2">
+    <div class="col-20 mt-xl-1">
       <!-- <h2>Email: <%= data.email %></h2>
       <h2>Name: <%= data.name %></h2>
       <h2>Gender: <%= data.gender %></h2>
@@ -27,27 +27,37 @@
       <!-- Thêm chỗ này nè nghen -->
 
       <!-- Dưới cái dòng này chỗ này -->
-      <img
-        class="d-flex justify-content-center"
-        src="./img/1.jpg"
-        width="128"
-        height="128"
-        alt=""
-      />
-      <H1 class="ten">Name: Hanh</H1>
-      <H1 class="sdt">Phone: 0123456789</H1>
-      <H1 class="diachi">Address: Thu Duc</H1>
-      <H1 class="gioitinh">gender: Female</H1>
-
+      <table class="align-items-center">
+        <tr>
+          <td>
+            <img
+              class="align-items-center align-content-center col-md-11 border-left mt-1"
+              src="./img/1.jpg"
+              width="128"
+              height="128"
+              alt=""
+            />
+          </td>
+          <td>
+            <H3 class="ten">Name: Hanh</H3>
+            <H3 class="sdt">Phone: 0123456789</H3>
+            <H3 class="diachi">Address: Thu Duc</H3>
+            <H3 class="gioitinh">Gender: Female</H3>
+          </td>
+        </tr>
+      </table>
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
+      <br />
       <div class="col-12 text-center mt-xl-2">
         <a class="text-danger font-weight-medium" href="/client"><h3>Go Shopping Now !!!</h3></a>
       </div>
-      <a href="/login"><button class="btn btn-primary">LOG OUT</button></a>
+      <a href="/login">
+        <button class="btn btn-primary align-items-center align-content-center">LOG OUT</button>
+      </a>
     </div>
   </div>
   <!-- content-wrapper ends -->
