--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -37,7 +37,7 @@
       <H1 class="ten">Name: Hanh</H1>
       <H1 class="sdt">Phone: 0123456789</H1>
       <H1 class="diachi">Address: Thu Duc</H1>
-      <H1 class="gioitinh">gender: Female</H1>
+      <H1 class="gioitinh">Gender: Female</H1>
 
       <!-- Thêm chỗ này nè nghen -->
       <!-- Thêm chỗ này nè nghen -->
