--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -56,7 +56,7 @@
         <a class="text-danger font-weight-medium" href="/client"><h3>Go Shopping Now !!!</h3></a>
       </div>
       <a href="/login">
-        <button class="btn btn-primary align-items-center align-content-center">LOG OUT</button>
+        <button class="btn btn-primary">LOG OUT</button>
       </a>
     </div>
   </div>
