--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -40,11 +40,13 @@
       </table>
       <!-- Dưới cái dòng này chỗ này -->
 
-      <div class="col-12 text-center mt-xl-2">
-        <a class="text-danger font-weight-medium" href="/client"><h3>Go Shopping Now !!!</h3></a>
-      </div>
-      <div>
-        <a href="/login"><button class="btn btn-primary">LOG OUT</button></a>
+      <div class="row mt-4">
+        <div class="col-8 text-center">
+          <a class="btn btn-danger" href="/client"><h3>Go Shopping Now !!!</h3></a>
+        </div>
+        <div class="col-4 text-left">
+          <a class="btn btn-primary" href="/login"><h3>Log Out</h3></a>
+        </div>
       </div>
     </div>
     <!-- content-wrapper ends -->
