--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -97,8 +97,7 @@
                 <span class="nav-text">Shipper</span>
               </a>
               <ul aria-expanded="false">
-                <li><a href="/free">Free</a></li>
-                <li><a href="/working">Working</a></li>
+                <li><a href="/admin-show-staff-list">Staff list</a></li>
               </ul>
             </li>
             <li>
@@ -151,6 +150,7 @@
     <script src="/plugins/common/common.min.js"></script>
     <script src="/js/custom.min.js"></script>
     <script src="/js/settings.js"></script>
+    <script src="js/gleek.js"></script>
     <script src="/js/styleSwitcher.js"></script>
 
     <!-- Circle progress -->
