--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
     <div class="box-container">
       <div class="row">
         <% if ( foods != '') { %> <% foods.forEach(function(food, index){ %>
-        <a href="#">
+        <a href="/product/<%= food._id %>">
           <div class="col-md-3 category__link">
             <div class="box" data-aos="fade-up">
               <div class="image">
@@ -59,21 +59,23 @@
     <div class="box-container">
       <div class="row">
         <% if ( drinks != '') { %> <% drinks.forEach(function(drink, index){ %>
-        <div class="col-md-3 category__link">
-          <div class="box" data-aos="fade-up">
-            <a href="/client-info">
+        <a href="/product/<%= drink._id %>"
+          ><div class="col-md-3 category__link">
+            <div class="box" data-aos="fade-up">
               <div class="image">
                 <img src=" <%= drink.image_url %> " alt="<%= drink.name %> " />
                 <h3><i class="fas fa-utensils"></i><%= drink.name %></h3>
               </div>
-            </a>
-            <div class="content">
-              <div class="price"><%= drink.price %></div>
-              <p><%= drink.description %></p>
-              <a href="#" class="btn btn-block btn-warning btn-lg text-white"><h4>Order now</h4></a>
+              <div class="content">
+                <div class="price"><%= drink.price %></div>
+                <p><%= drink.description %></p>
+                <a href="#" class="btn btn-block btn-warning btn-lg text-white"
+                  ><h4>Order now</h4></a
+                >
+              </div>
             </div>
-          </div>
-        </div>
+          </div></a
+        >
         <% }) %> <% } %>
       </div>
     </div>
