--- a/views/layouts/err.ejs
+++ b/views/layouts/err.ejs
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>PolluxUI Admin</title>
     <!-- base:css -->
-    <link rel="stylesheet" href="./vendors/typicons/typicons.css" />
-    <link rel="stylesheet" href="./vendors/css/vendor.bundle.base.css" />
+    <link rel="stylesheet" href="/vendors/typicons/typicons.css" />
+    <link rel="stylesheet" href="/vendors/css/vendor.bundle.base.css" />
     <!-- endinject -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
+    <link rel="stylesheet" href="/css/vertical-layout-light/style.css" />
     <!-- endinject -->
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
   </head>
@@ -18,14 +18,14 @@
   <body>
     <main><%- body -%></main>
     <!-- base:js -->
-    <script src="./vendors/js/vendor.bundle.base.js"></script>
+    <script src="/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- inject:js -->
-    <script src="./js/off-canvas.js"></script>
-    <script src="./js/hoverable-collapse.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/todolist.js"></script>
+    <script src="/js/off-canvas.js"></script>
+    <script src="/js/hoverable-collapse.js"></script>
+    <script src="/js/template.js"></script>
+    <script src="/js/settings.js"></script>
+    <script src="/js/todolist.js"></script>
     <!-- endinject -->
   </body>
 </html>
