--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -15,15 +15,15 @@
 
     <!-- base:css -->
 
-    <link rel="stylesheet" href="./vendors/typicons/typicons.css" />
-    <link rel="stylesheet" href="./vendors/css/vendor.bundle.base.css" />
+    <link rel="stylesheet" href="/vendors/typicons/typicons.css" />
+    <link rel="stylesheet" href="/vendors/css/vendor.bundle.base.css" />
     <!-- endinject -->
 
     <!-- custom css file cdn link  -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="./css/vertical-layout-light/style.css" />
+    <link rel="stylesheet" href="/css/vertical-layout-light/style.css" />
     <!-- endinject -->
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
   </head>
@@ -182,14 +182,14 @@
         </div>
       </div>
     </footer>
-    <script src="./vendors/js/vendor.bundle.base.js"></script>
+    <script src="/vendors/js/vendor.bundle.base.js"></script>
     <!-- inject:js -->
-    <script src="./js/off-canvas.js"></script>
-    <script src="./js/hoverable-collapse.js"></script>
-    <script src="./js/template.js"></script>
-    <script src="./js/settings.js"></script>
-    <script src="./js/todolist.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="/js/off-canvas.js"></script>
+    <script src="/js/hoverable-collapse.js"></script>
+    <script src="/js/template.js"></script>
+    <script src="/js/settings.js"></script>
+    <script src="/js/todolist.js"></script>
+    <script src="/js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
