--- a/views/client-info.ejs
+++ b/views/client-info.ejs
@@ -31,10 +31,10 @@
             />
           </td>
           <td>
-            <H3 class="ten">Name: Hanh</H3>
-            <H3 class="sdt">Phone: 0123456789</H3>
-            <H3 class="diachi">Address: Thu Duc</H3>
-            <H3 class="gioitinh">Gender: Female</H3>
+            <H2 class="text-warning">Name: <%= data.name%></H2>
+            <H3 class="sdt">Phone: <%= data.tel %></H3>
+            <H3 class="diachi">Address: <%= data.address %></H3>
+            <H3 class="gioitinh">Gender: <%= data.gender %></H3>
           </td>
         </tr>
       </table>
