--- a/views/register.ejs
+++ b/views/register.ejs
@@ -44,16 +44,17 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="confirm-password" class="form-label"><H3>Confirm Password</H3></label>
+                  <label for="confirmPassword" class="form-label"><H3>Confirm Password</H3></label>
                   <input
                     style="font-size: 16px"
                     type="password"
-                    name="confirm-password"
-                    id="confirm-password"
+                    name="confirmPassword"
+                    id="confirmPassword"
                     class="form-control form-control-lg"
                   />
                   <hr />
                 </div>
+
                 <div class="col-12">
                   <label for="name" class="form-label"><H3>Name</H3></label>
                   <input
@@ -65,6 +66,7 @@
                   />
                   <hr />
                 </div>
+
                 <div class="col-12">
                   <label for="gender" class="form-label"><H3>Gender</H3></label>
                   <br />
@@ -89,23 +91,23 @@
                   <hr />
                 </div>
                 <div class="col-12">
-                  <label for="phone" class="form-label"><H3>Phone</H3></label>
-                  <input
-                    style="font-size: 16px"
-                    type="text"
-                    name="phone"
-                    id="phone"
-                    class="form-control form-control-lg"
-                  />
-                  <hr />
-                </div>
-                <div class="col-12">
                   <label for="address" class="form-label"><H3>Address</H3></label>
                   <input
                     style="font-size: 16px"
                     type="text"
                     name="address"
                     id="address"
+                    class="form-control form-control-lg"
+                  />
+                  <hr />
+                </div>
+                <div class="col-12">
+                  <label for="tel" class="form-label"><H3>Phone number</H3></label>
+                  <input
+                    style="font-size: 16px"
+                    type="tel"
+                    name="tel"
+                    id="tel"
                     class="form-control form-control-lg"
                   />
                   <hr />
